looked at the gdp data

--- a/time_range_research.ipynb
+++ b/time_range_research.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,13 +37,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "278\n",
       "['Afghanistan' 'Africa' 'Africa (GCP)' 'Aland Islands' 'Albania' 'Algeria'\n",
       " 'American Samoa' 'Andorra' 'Angola' 'Anguilla' 'Antarctica'\n",
       " 'Antigua and Barbuda' 'Argentina' 'Armenia' 'Aruba' 'Asia' 'Asia (GCP)'\n",
@@ -127,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -162,6 +163,71 @@
     "most_frequent_year_count = year_counts.max()\n",
     "\n",
     "print(f\"The most frequent year is {most_frequent_year} with {most_frequent_year_count} occurrences.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### look at the gdp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "166\n",
+      "         country      mean_gdp  min_year       min_gdp  max_year       max_gdp\n",
+      "0    Afghanistan  2.146437e+10      1994  7.919857e+09      2017  6.875280e+10\n",
+      "1        Albania  1.160662e+10      1870  4.287330e+08      2018  3.400911e+10\n",
+      "2        Algeria  1.651044e+11      1870  4.304640e+09      2018  5.903176e+11\n",
+      "3         Angola  3.792500e+10      1950  6.905244e+09      2016  1.783339e+11\n",
+      "4      Argentina  2.617168e+11      1850  2.193400e+09      2017  8.504822e+11\n",
+      "..           ...           ...       ...           ...       ...           ...\n",
+      "161      Vietnam  1.621886e+11      1870  8.475040e+09      2018  6.614884e+11\n",
+      "162        World  3.865245e+13      1820  1.138510e+12      2018  1.136302e+14\n",
+      "163        Yemen  4.583473e+10      1950  6.936333e+09      2010  1.181481e+11\n",
+      "164       Zambia  1.571914e+10      1950  2.690862e+09      2018  6.097862e+10\n",
+      "165     Zimbabwe  1.542784e+10      1950  3.186970e+09      1998  2.798427e+10\n",
+      "\n",
+      "[166 rows x 6 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# remove the rows with missing values\n",
+    "data_test = data[['country', 'year', 'gdp']].dropna()\n",
+    "\n",
+    "# double check the number of countries for the new dataframe size\n",
+    "print(data_test['country'].unique().size)\n",
+    "\n",
+    "# average GDP per country\n",
+    "average_gdp = data_test.groupby('country')['gdp'].mean()\n",
+    "\n",
+    "# get the minimum and maximum GDP for each country\n",
+    "min_gdp = data_test.groupby('country')['gdp'].idxmin()\n",
+    "max_gdp = data_test.groupby('country')['gdp'].idxmax()\n",
+    "\n",
+    "# get the corresponding year\n",
+    "# ! get the row index of the minimum and maximum GDP and set the column names\n",
+    "min_gdp_per_country = data_test.loc[min_gdp, ['country', 'year', 'gdp']].rename(columns={'year': 'min_year', 'gdp': 'min_gdp'})\n",
+    "max_gdp_per_country = data_test.loc[max_gdp, ['country', 'year', 'gdp']].rename(columns={'year': 'max_year', 'gdp': 'max_gdp'})\n",
+    "\n",
+    "# make 1 dataframe with all the information\n",
+    "# ! we reset the index to make the dataframe with its own column names\n",
+    "gdp_per_country = average_gdp.reset_index().rename(columns={'gdp': 'mean_gdp'})\n",
+    "\n",
+    "# ! merge the min and max gdp into the average\n",
+    "gdp_per_country = gdp_per_country.merge(min_gdp_per_country, on='country')\n",
+    "gdp_per_country = gdp_per_country.merge(max_gdp_per_country, on='country')\n",
+    "\n",
+    "# Print the result\n",
+    "print(gdp_per_country)"
    ]
   }
  ],
