worked on milestone 4

--- a/cleaning_data.ipynb
+++ b/cleaning_data.ipynb
@@ -9,15 +9,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "from scipy.stats import pearsonr\n",
     "\n",
     "# Load the data\n",
     "data = pd.read_csv('dataset/prepared_data.csv', sep=\";\")\n"
@@ -25,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,6 +57,21 @@
     "    mean_value = data[data[column] != 0][column].mean()\n",
     "    # Replace zero values with the calculated mean\n",
     "    data[column] = data[column].replace(0, mean_value)\n",
+    "\n",
+    "\n",
+    "# CLEANING MISSING VALUES\n",
+    "# Specify columns to exclude from filling NaNs\n",
+    "exclude_columns = ['country', 'year', 'iso_code']\n",
+    "\n",
+    "# Fill NaNs with the mean for columns not in the exclude list\n",
+    "columns_to_fill = [col for col in data.columns if col not in exclude_columns]\n",
+    "data[columns_to_fill] = data[columns_to_fill].apply(lambda x: x.fillna(x.mean()), axis=0)\n",
+    "\n",
+    "# MERGE IN WORLD BANK CLASSSIFICATION\n",
+    "world_bank = pd.read_csv('dataset/world-bank-income-classification.csv')\n",
+    "world_bank = world_bank[['country', 'year', 'classification']]\n",
+    "\n",
+    "data = pd.merge(data, world_bank, on=['country', 'year'])\n",
     "\n",
     "# Save the cleaned data to a new CSV file\n",
     "data.to_csv('dataset/cleaned_data.csv', sep=\";\", index=False)"
