--- a/data_vis.ipynb
+++ b/data_vis.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
     "from scipy.stats import pearsonr\n",
     "\n",
     "# Load the data\n",
-    "data = pd.read_csv('dataset/prepared_data.csv', sep=\";\")\n",
+    "data = pd.read_csv('dataset/cleaned_data.csv', sep=\";\")\n",
     "print(data.columns)"
    ]
   },
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -410,18 +410,31 @@
      "text": [
       "\n",
       "\n",
-      " 11\n",
+      " 24\n",
       "gdp                             1.000000\n",
-      "co2                             0.941342\n",
-      "co2_including_luc               0.927488\n",
-      "consumption_co2                 0.966193\n",
-      "cumulative_co2                  0.911714\n",
-      "cumulative_co2_including_luc    0.900533\n",
-      "cumulative_coal_co2             0.911633\n",
-      "oil_co2                         0.933774\n",
-      "primary_energy_consumption      0.965467\n",
-      "total_ghg                       0.932481\n",
-      "total_ghg_excluding_lucf        0.934617\n",
+      "cement_co2                      0.859411\n",
+      "co2                             0.972864\n",
+      "co2_including_luc               0.970671\n",
+      "coal_co2                        0.887923\n",
+      "consumption_co2                 0.981035\n",
+      "cumulative_cement_co2           0.965480\n",
+      "cumulative_co2                  0.971551\n",
+      "cumulative_co2_including_luc    0.968744\n",
+      "cumulative_coal_co2             0.962774\n",
+      "cumulative_flaring_co2          0.913756\n",
+      "cumulative_gas_co2              0.918749\n",
+      "cumulative_luc_co2              0.899790\n",
+      "cumulative_oil_co2              0.960410\n",
+      "cumulative_other_co2            0.883337\n",
+      "flaring_co2                     0.911447\n",
+      "gas_co2                         0.952438\n",
+      "methane                         0.944678\n",
+      "nitrous_oxide                   0.956687\n",
+      "oil_co2                         0.969522\n",
+      "other_industry_co2              0.840160\n",
+      "primary_energy_consumption      0.983057\n",
+      "total_ghg                       0.976856\n",
+      "total_ghg_excluding_lucf        0.975605\n",
       "Name: gdp, dtype: float64\n"
      ]
     }
@@ -444,9 +457,9 @@
     "# print(gdp_related_numbers.count())\n",
     "# print(gdp_related_numbers)\n",
     "\n",
-    "# above_0_8 = gdp_related_numbers[gdp_related_numbers > 0.8]\n",
-    "# print(\"\\n\\n\",above_0_8.count())\n",
-    "# print(above_0_8)\n",
+    "above_0_8 = gdp_related_numbers[gdp_related_numbers > 0.8]\n",
+    "print(\"\\n\\n\",above_0_8.count())\n",
+    "print(above_0_8)\n",
     "\n",
     "\n",
     "# above_0_85 = gdp_related_numbers[gdp_related_numbers > 0.85]\n",
@@ -474,13 +487,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Albania', 'Argentina', 'Armenia', 'Australia', 'Bahrain', 'Bangladesh', 'Benin', 'Bolivia', 'Botswana', 'Brazil', 'Burkina Faso', 'Cambodia', 'Cameroon', 'Canada', 'Chile', 'China', 'Colombia', 'Costa Rica', \"Cote d'Ivoire\", 'Cyprus', 'Dominican Republic', 'Ecuador', 'Egypt', 'El Salvador', 'Ethiopia', 'Ghana', 'Guatemala', 'Guinea', 'Honduras', 'Hong Kong', 'India', 'Indonesia', 'Iran', 'Israel', 'Jordan', 'Kazakhstan', 'Kenya', 'Laos', 'Madagascar', 'Malawi', 'Malaysia', 'Mauritius', 'Mexico', 'Mongolia', 'Morocco', 'Mozambique', 'Nepal', 'New Zealand', 'Nicaragua', 'Nigeria', 'Oman', 'Pakistan', 'Panama', 'Paraguay', 'Peru', 'Philippines', 'Qatar', 'Rwanda', 'Saudi Arabia', 'Senegal', 'South Africa', 'South Korea', 'Sri Lanka', 'Taiwan', 'Tanzania', 'Thailand', 'Trinidad and Tobago', 'Tunisia', 'Turkey', 'Uganda', 'United Arab Emirates', 'Vietnam', 'Zambia']\n"
+     ]
+    }
+   ],
    "source": [
     "from scipy.stats import pearsonr\n",
     "\n",
-    "data_corr = data[data['country'] == 'World']\n",
+    "data_corr = data[data['country'] != 'World']\n",
     "\n",
     "# List to store results\n",
     "results = []\n",
@@ -500,8 +521,16 @@
     "# Convert results to a DataFrame\n",
     "results_df = pd.DataFrame(results)\n",
     "\n",
-    "with open('correlation_results_gdp_co2.txt', 'w') as file:\n",
-    "    file.write(results_df.to_string(index=False))"
+    "results_df = results_df.sort_values(by='pearson_corr', ascending=False)\n",
+    "\n",
+    "results_df = results_df[results_df['pearson_corr'] > 0.74]\n",
+    "\n",
+    "print(sorted(results_df['country'].unique()))\n",
+    "\n",
+    "results_df.to_csv('dataset/high_co2_cor_data.csv', sep=\";\", index=False)\n",
+    "\n",
+    "# with open('correlation_results_gdp_co2.txt', 'w') as file:\n",
+    "#     file.write(results_df.to_string(index=False))"
    ]
   },
   {
