--- a/corTest.ipynb
+++ b/corTest.ipynb
@@ -2,92 +2,49 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "id": "dab2cbec",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(   country  year iso_code  population           gdp  cement_co2  \\\n",
-       " 0  Albania  1990      ALB     3295073  1.294785e+10       384.0   \n",
-       " 1  Albania  1991      ALB     3302087  9.375844e+09       307.0   \n",
-       " 2  Albania  1992      ALB     3303738  8.745681e+09       103.0   \n",
-       " 3  Albania  1993      ALB     3300715  9.636359e+09       103.0   \n",
-       " 4  Albania  1994      ALB     3294001  1.059613e+10        52.0   \n",
-       " \n",
-       "    cement_co2_per_capita   co2  co2_growth_abs  co2_growth_prct  ...  \\\n",
-       " 0                  116.0  5521         -3466.0         -38566.0  ...   \n",
-       " 1                   93.0  4290         -1230.0         -22287.0  ...   \n",
-       " 2                   31.0  2517         -1773.0         -41329.0  ...   \n",
-       " 3                   31.0  2338          -179.0          -7116.0  ...   \n",
-       " 4                   16.0  1924          -414.0         -17716.0  ...   \n",
-       " \n",
-       "    share_global_other_co2  share_of_temperature_change_from_ghg  \\\n",
-       " 0                     NaN                                    35   \n",
-       " 1                     NaN                                    35   \n",
-       " 2                     NaN                                    34   \n",
-       " 3                     NaN                                    34   \n",
-       " 4                     NaN                                    34   \n",
-       " \n",
-       "    temperature_change_from_ch4  temperature_change_from_co2  \\\n",
-       " 0                            0                            0   \n",
-       " 1                            0                            0   \n",
-       " 2                            0                            0   \n",
-       " 3                            0                            0   \n",
-       " 4                            0                            0   \n",
-       " \n",
-       "    temperature_change_from_ghg  temperature_change_from_n2o  total_ghg  \\\n",
-       " 0                            0                            0    11300.0   \n",
-       " 1                            0                            0     8960.0   \n",
-       " 2                            0                            0     6950.0   \n",
-       " 3                            0                            0     6920.0   \n",
-       " 4                            0                            0     7740.0   \n",
-       " \n",
-       "    total_ghg_excluding_lucf  trade_co2  trade_co2_share  \n",
-       " 0                   11100.0      0.034            0.616  \n",
-       " 1                    8760.0      0.322            7.504  \n",
-       " 2                    6750.0      0.397           15.762  \n",
-       " 3                    6720.0      0.333           14.236  \n",
-       " 4                    7540.0      0.447           23.210  \n",
-       " \n",
-       " [5 rows x 79 columns],\n",
-       " Index(['country', 'year', 'iso_code', 'population', 'gdp', 'cement_co2',\n",
-       "        'cement_co2_per_capita', 'co2', 'co2_growth_abs', 'co2_growth_prct',\n",
-       "        'co2_including_luc', 'co2_including_luc_growth_abs',\n",
-       "        'co2_including_luc_growth_prct', 'co2_including_luc_per_capita',\n",
-       "        'co2_including_luc_per_gdp', 'co2_including_luc_per_unit_energy',\n",
-       "        'co2_per_capita', 'co2_per_gdp', 'co2_per_unit_energy', 'coal_co2',\n",
-       "        'coal_co2_per_capita', 'consumption_co2', 'consumption_co2_per_capita',\n",
-       "        'consumption_co2_per_gdp', 'cumulative_cement_co2', 'cumulative_co2',\n",
-       "        'cumulative_co2_including_luc', 'cumulative_coal_co2',\n",
-       "        'cumulative_flaring_co2', 'cumulative_gas_co2', 'cumulative_luc_co2',\n",
-       "        'cumulative_oil_co2', 'cumulative_other_co2', 'energy_per_capita',\n",
-       "        'energy_per_gdp', 'flaring_co2', 'flaring_co2_per_capita', 'gas_co2',\n",
-       "        'gas_co2_per_capita', 'ghg_excluding_lucf_per_capita', 'ghg_per_capita',\n",
-       "        'land_use_change_co2', 'land_use_change_co2_per_capita', 'methane',\n",
-       "        'methane_per_capita', 'nitrous_oxide', 'nitrous_oxide_per_capita',\n",
-       "        'oil_co2', 'oil_co2_per_capita', 'other_co2_per_capita',\n",
-       "        'other_industry_co2', 'primary_energy_consumption',\n",
-       "        'share_global_cement_co2', 'share_global_co2',\n",
-       "        'share_global_co2_including_luc', 'share_global_coal_co2',\n",
-       "        'share_global_cumulative_cement_co2', 'share_global_cumulative_co2',\n",
-       "        'share_global_cumulative_co2_including_luc',\n",
-       "        'share_global_cumulative_coal_co2',\n",
-       "        'share_global_cumulative_flaring_co2',\n",
-       "        'share_global_cumulative_gas_co2', 'share_global_cumulative_luc_co2',\n",
-       "        'share_global_cumulative_oil_co2', 'share_global_cumulative_other_co2',\n",
-       "        'share_global_flaring_co2', 'share_global_gas_co2',\n",
-       "        'share_global_luc_co2', 'share_global_oil_co2',\n",
-       "        'share_global_other_co2', 'share_of_temperature_change_from_ghg',\n",
-       "        'temperature_change_from_ch4', 'temperature_change_from_co2',\n",
-       "        'temperature_change_from_ghg', 'temperature_change_from_n2o',\n",
-       "        'total_ghg', 'total_ghg_excluding_lucf', 'trade_co2',\n",
-       "        'trade_co2_share'],\n",
-       "       dtype='object'))"
+       "Index(['country', 'year', 'iso_code', 'population', 'gdp', 'cement_co2',\n",
+       "       'cement_co2_per_capita', 'co2', 'co2_growth_abs', 'co2_growth_prct',\n",
+       "       'co2_including_luc', 'co2_including_luc_growth_abs',\n",
+       "       'co2_including_luc_growth_prct', 'co2_including_luc_per_capita',\n",
+       "       'co2_including_luc_per_gdp', 'co2_including_luc_per_unit_energy',\n",
+       "       'co2_per_capita', 'co2_per_gdp', 'co2_per_unit_energy', 'coal_co2',\n",
+       "       'coal_co2_per_capita', 'consumption_co2', 'consumption_co2_per_capita',\n",
+       "       'consumption_co2_per_gdp', 'cumulative_cement_co2', 'cumulative_co2',\n",
+       "       'cumulative_co2_including_luc', 'cumulative_coal_co2',\n",
+       "       'cumulative_flaring_co2', 'cumulative_gas_co2', 'cumulative_luc_co2',\n",
+       "       'cumulative_oil_co2', 'cumulative_other_co2', 'energy_per_capita',\n",
+       "       'energy_per_gdp', 'flaring_co2', 'flaring_co2_per_capita', 'gas_co2',\n",
+       "       'gas_co2_per_capita', 'ghg_excluding_lucf_per_capita', 'ghg_per_capita',\n",
+       "       'land_use_change_co2', 'land_use_change_co2_per_capita', 'methane',\n",
+       "       'methane_per_capita', 'nitrous_oxide', 'nitrous_oxide_per_capita',\n",
+       "       'oil_co2', 'oil_co2_per_capita', 'other_co2_per_capita',\n",
+       "       'other_industry_co2', 'primary_energy_consumption',\n",
+       "       'share_global_cement_co2', 'share_global_co2',\n",
+       "       'share_global_co2_including_luc', 'share_global_coal_co2',\n",
+       "       'share_global_cumulative_cement_co2', 'share_global_cumulative_co2',\n",
+       "       'share_global_cumulative_co2_including_luc',\n",
+       "       'share_global_cumulative_coal_co2',\n",
+       "       'share_global_cumulative_flaring_co2',\n",
+       "       'share_global_cumulative_gas_co2', 'share_global_cumulative_luc_co2',\n",
+       "       'share_global_cumulative_oil_co2', 'share_global_cumulative_other_co2',\n",
+       "       'share_global_flaring_co2', 'share_global_gas_co2',\n",
+       "       'share_global_luc_co2', 'share_global_oil_co2',\n",
+       "       'share_global_other_co2', 'share_of_temperature_change_from_ghg',\n",
+       "       'temperature_change_from_ch4', 'temperature_change_from_co2',\n",
+       "       'temperature_change_from_ghg', 'temperature_change_from_n2o',\n",
+       "       'total_ghg', 'total_ghg_excluding_lucf', 'trade_co2',\n",
+       "       'trade_co2_share'],\n",
+       "      dtype='object')"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -98,7 +55,7 @@
     "# data = pd.read_csv('dataset/visualizing_global_co2_data.csv')\n",
     "data = pd.read_csv('dataset/Data_Science_CO2.csv', sep=\";\")\n",
     "\n",
-    "data.head(), data.columns"
+    "data.columns"
    ]
   },
   {
@@ -217,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "69b98a4d",
    "metadata": {},
    "outputs": [
@@ -289,7 +246,9 @@
     "\n",
     "# Cor Testing\n",
     "correlation, p_value = pearsonr(Country_gdp_diff, Country_co2_diff)\n",
-    "correlation, p_value"
+    "correlation, p_value\n",
+    "\n",
+    "\n"
    ]
   },
   {
