just put it all up

--- a/corTest.ipynb
+++ b/corTest.ipynb
@@ -256,8 +256,40 @@
    "execution_count": null,
    "id": "6f3cdba0",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'LabelEncoder' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 7\u001b[0m\n\u001b[1;32m      4\u001b[0m data \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mread_csv(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdataset/cleaned_data.csv\u001b[39m\u001b[38;5;124m\"\u001b[39m, sep\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m;\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      6\u001b[0m \u001b[38;5;66;03m# Encode classification column\u001b[39;00m\n\u001b[0;32m----> 7\u001b[0m label_encoder \u001b[38;5;241m=\u001b[39m \u001b[43mLabelEncoder\u001b[49m()\n\u001b[1;32m      8\u001b[0m data[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mclassification_encoded\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m label_encoder\u001b[38;5;241m.\u001b[39mfit_transform(data[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mclassification\u001b[39m\u001b[38;5;124m'\u001b[39m])\n\u001b[1;32m     10\u001b[0m \u001b[38;5;66;03m# Create correlation matrix with encoded classification\u001b[39;00m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'LabelEncoder' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "\n",
+    "data = pd.read_csv(\"dataset/cleaned_data.csv\", sep=\";\")\n",
+    "\n",
+    "# Encode classification column\n",
+    "label_encoder = LabelEncoder()\n",
+    "data['classification_encoded'] = label_encoder.fit_transform(data['classification'])\n",
+    "\n",
+    "# Create correlation matrix with encoded classification\n",
+    "corr_matrix_regular = data[['gdp', 'co2', 'nitrous_oxide', 'methane', 'classification_encoded']].corr()\n",
+    "\n",
+    "# Create heatmap\n",
+    "plt.figure(figsize=(25, 25))\n",
+    "sns.heatmap(corr_matrix_regular, annot=True, cmap='viridis')\n",
+    "plt.title(\"Correlation Matrix of Economic Indicators and CO2 Indicators\")\n",
+    "plt.show()"
+   ]
   },
   {
    "cell_type": "code",
