--- a/regression.ipynb
+++ b/regression.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -94,25 +94,23 @@
      "text": [
       "['High-income countries' 'Low-income countries'\n",
       " 'Lower-middle-income countries' 'Upper-middle-income countries']\n",
-      "0.48653846153846153\n",
+      "0.48846153846153845\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.56      0.67      0.61       158\n",
-      "           1       0.46      0.55      0.50       121\n",
-      "           2       0.56      0.32      0.40       139\n",
-      "           3       0.34      0.35      0.34       102\n",
+      "           0       0.76      0.68      0.72       158\n",
+      "           1       0.44      0.51      0.47       121\n",
+      "           2       0.35      0.34      0.34       139\n",
+      "           3       0.37      0.37      0.37       102\n",
       "\n",
       "    accuracy                           0.49       520\n",
-      "   macro avg       0.48      0.47      0.47       520\n",
-      "weighted avg       0.49      0.49      0.48       520\n",
+      "   macro avg       0.48      0.48      0.48       520\n",
+      "weighted avg       0.50      0.49      0.49       520\n",
       "\n"
      ]
     }
    ],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import LabelEncoder\n",
@@ -134,7 +132,7 @@
     "features_train, features_test, dependent_train, dependent_test = train_test_split(features, dependent_encoded, test_size=0.2, random_state=42)\n",
     "\n",
     "# Initialize the KNeighborsClassifier\n",
-    "knn = KNeighborsClassifier(n_neighbors=15)\n",
+    "knn = KNeighborsClassifier(n_neighbors=1)\n",
     "\n",
     "# Fit the model\n",
     "knn.fit(features_train, dependent_train)\n",
@@ -151,12 +149,67 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### KNN KFOLD"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average Accuracy: 0.82\n",
+      "[0.76923077 0.81538462 0.8        0.79230769 0.8        0.79230769\n",
+      " 0.86923077 0.86153846 0.84615385 0.85384615 0.80769231 0.79230769\n",
+      " 0.80769231 0.78461538 0.80769231 0.80769231 0.8        0.86923077\n",
+      " 0.87596899 0.81395349]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "from sklearn.model_selection import cross_val_score, KFold\n",
+    "\n",
+    "# Load the data\n",
+    "data = pd.read_csv(\"dataset/cleaned_data.csv\", sep=\";\")\n",
+    "\n",
+    "# Extract the relevant columns\n",
+    "features = data[['cement_co2', 'coal_co2', 'flaring_co2', 'gas_co2', 'land_use_change_co2', 'oil_co2', 'other_industry_co2', 'trade_co2']]\n",
+    "dependent = data['classification']\n",
+    "\n",
+    "# Encode the string labels into numeric values\n",
+    "label_encoder = LabelEncoder()\n",
+    "dependent_encoded = label_encoder.fit_transform(dependent)\n",
+    "\n",
+    "# Initialize the KNN classifier\n",
+    "decision_tree = KNeighborsClassifier(n_neighbors=1)\n",
+    "\n",
+    "# Perform k-fold cross-validation\n",
+    "k = 20  # Number of folds\n",
+    "kf = KFold(n_splits=k, shuffle=True, random_state=42)\n",
+    "scores = cross_val_score(decision_tree, features, dependent_encoded, cv=kf)\n",
+    "\n",
+    "# Calculate and print the average accuracy\n",
+    "average_accuracy = scores.mean()\n",
+    "print(f'Average Accuracy: {average_accuracy:.2f}')\n",
+    "print(scores)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### KNN 20 ROUNDS"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -236,17 +289,17 @@
      "text": [
       "['High-income countries' 'Low-income countries'\n",
       " 'Lower-middle-income countries' 'Upper-middle-income countries']\n",
-      "0.8134615384615385\n",
+      "0.8\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.89      0.89      0.89       158\n",
-      "           1       0.90      0.86      0.88       121\n",
-      "           2       0.72      0.78      0.75       139\n",
-      "           3       0.73      0.68      0.70       102\n",
+      "           0       0.88      0.92      0.90       158\n",
+      "           1       0.87      0.85      0.86       121\n",
+      "           2       0.72      0.73      0.73       139\n",
+      "           3       0.68      0.65      0.66       102\n",
       "\n",
-      "    accuracy                           0.81       520\n",
-      "   macro avg       0.81      0.80      0.81       520\n",
-      "weighted avg       0.82      0.81      0.81       520\n",
+      "    accuracy                           0.80       520\n",
+      "   macro avg       0.79      0.79      0.79       520\n",
+      "weighted avg       0.80      0.80      0.80       520\n",
       "\n"
      ]
     }
@@ -256,6 +309,7 @@
     "import numpy as nps\n",
     "from sklearn import tree\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.model_selection import cross_val_score, KFold\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn.preprocessing import LabelEncoder\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -278,7 +332,7 @@
     "features_train, features_test, dependent_train, dependent_test = train_test_split(features, dependent_encoded, test_size=0.2, random_state=42)\n",
     "\n",
     "# Initialize the DecisionTreeClassifier\n",
-    "dtree = DecisionTreeClassifier()\n",
+    "dtree = DecisionTreeClassifier(max_depth=15)\n",
     "\n",
     "# Fit the model\n",
     "dtree.fit(features_train, dependent_train)\n",
@@ -301,21 +355,77 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### DECISION TREE 20 ROUNDS"
+    "### DECISION TREE KFOLD"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean:  0.8046558704453443\n",
-      "Min:  0.7923076923076923\n",
-      "Max:  0.8211538461538461\n"
+      "Average Accuracy: 0.89\n",
+      "[0.90769231 0.92307692 0.88461538 0.88461538 0.83846154 0.9\n",
+      " 0.93076923 0.89230769 0.84615385 0.9        0.89230769 0.82307692\n",
+      " 0.91538462 0.87692308 0.89230769 0.9        0.88461538 0.90769231\n",
+      " 0.92248062 0.89147287]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.model_selection import cross_val_score, KFold\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "\n",
+    "# Load the data\n",
+    "data = pd.read_csv(\"dataset/cleaned_data.csv\", sep=\";\")\n",
+    "\n",
+    "# Extract the relevant columns\n",
+    "# ! POPULATION IS VERY IMPORTANT IN THIS CASE\n",
+    "features = data[['population','cement_co2', 'coal_co2', 'flaring_co2', 'gas_co2', 'land_use_change_co2', 'oil_co2', 'other_industry_co2', 'trade_co2']]\n",
+    "dependent = data['classification']\n",
+    "\n",
+    "# Encode the string labels into numeric values\n",
+    "label_encoder = LabelEncoder()\n",
+    "dependent_encoded = label_encoder.fit_transform(dependent)\n",
+    "\n",
+    "# Initialize the Decision Tree classifier\n",
+    "decision_tree = DecisionTreeClassifier(max_depth=15, random_state=42)\n",
+    "\n",
+    "# Perform k-fold cross-validation\n",
+    "k = 20  # Number of folds\n",
+    "kf = KFold(n_splits=k, shuffle=True, random_state=42)\n",
+    "scores = cross_val_score(decision_tree, features, dependent_encoded, cv=kf)\n",
+    "\n",
+    "# Calculate and print the average accuracy\n",
+    "average_accuracy = scores.mean()\n",
+    "print(f'Average Accuracy: {average_accuracy:.2f}')\n",
+    "print(scores)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### DECISION TREE 20 ROUNDS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean:  0.8880566801619433\n",
+      "Min:  0.8788461538461538\n",
+      "Max:  0.8961538461538462\n"
      ]
     }
    ],
@@ -334,7 +444,7 @@
     "\n",
     "# Extract the relevant columns\n",
     "# ! POPULATION IS VERY IMPORTANT IN THIS CASE\n",
-    "features = data[['cement_co2', 'coal_co2', 'flaring_co2', 'gas_co2', 'land_use_change_co2', 'oil_co2', 'other_industry_co2', 'trade_co2']]\n",
+    "features = data[['population','cement_co2', 'coal_co2', 'flaring_co2', 'gas_co2', 'land_use_change_co2', 'oil_co2', 'other_industry_co2', 'trade_co2']]\n",
     "dependent = data['classification']\n",
     "\n",
     "# Encode the string labels into numeric values\n",
@@ -347,7 +457,7 @@
     "    features_train, features_test, dependent_train, dependent_test = train_test_split(features, dependent_encoded, test_size=0.2, random_state=42)\n",
     "\n",
     "    # Initialize the DecisionTreeClassifier\n",
-    "    dtree = DecisionTreeClassifier()\n",
+    "    dtree = DecisionTreeClassifier(max_depth=15)\n",
     "\n",
     "    # Fit the model\n",
     "    dtree.fit(features_train, dependent_train)\n",
@@ -379,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -388,17 +498,17 @@
      "text": [
       "['High-income countries' 'Low-income countries'\n",
       " 'Lower-middle-income countries' 'Upper-middle-income countries']\n",
-      "0.9019230769230769\n",
+      "0.8903846153846153\n",
       "              precision    recall  f1-score   support\n",
       "\n",
       "           0       0.96      0.97      0.97       158\n",
-      "           1       0.91      0.96      0.93       121\n",
-      "           2       0.85      0.86      0.85       139\n",
-      "           3       0.88      0.78      0.83       102\n",
+      "           1       0.88      0.96      0.92       121\n",
+      "           2       0.83      0.82      0.83       139\n",
+      "           3       0.87      0.77      0.82       102\n",
       "\n",
-      "    accuracy                           0.90       520\n",
-      "   macro avg       0.90      0.89      0.89       520\n",
-      "weighted avg       0.90      0.90      0.90       520\n",
+      "    accuracy                           0.89       520\n",
+      "   macro avg       0.89      0.88      0.88       520\n",
+      "weighted avg       0.89      0.89      0.89       520\n",
       "\n"
      ]
     }
@@ -427,7 +537,7 @@
     "features_train, features_test, dependent_train, dependent_test = train_test_split(features, dependent_encoded, test_size=0.2, random_state=42)\n",
     "\n",
     "# Initialize and fit the RandomForestClassifier\n",
-    "rforest = RandomForestClassifier()\n",
+    "rforest = RandomForestClassifier(max_depth=15)\n",
     "rforest = rforest.fit(features_train, dependent_train)\n",
     "\n",
     "# Make predictions on the test data\n",
@@ -441,21 +551,74 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### RANDOM FOREST 20 ROUNDS"
+    "### RANDOM FOREST KFOLD"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean:  0.8995951417004049\n",
-      "Min:  0.8884615384615384\n",
-      "Max:  0.9096153846153846\n"
+      "Average Accuracy: 0.93\n",
+      "[0.91730769 0.94230769 0.93461538 0.90944123 0.94990366]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "from sklearn.model_selection import cross_val_score, KFold\n",
+    "\n",
+    "# Load the data\n",
+    "data = pd.read_csv(\"dataset/cleaned_data.csv\", sep=\";\")\n",
+    "\n",
+    "# Extract the relevant columns\n",
+    "# ! POPULATION IS VERY IMPORTANT IN THIS CASE\n",
+    "features = data[['population','cement_co2', 'coal_co2', 'flaring_co2', 'gas_co2', 'land_use_change_co2', 'oil_co2', 'other_industry_co2', 'trade_co2']]\n",
+    "dependent = data['classification']\n",
+    "\n",
+    "# Encode the string labels into numeric values\n",
+    "label_encoder = LabelEncoder()\n",
+    "dependent_encoded = label_encoder.fit_transform(dependent)\n",
+    "\n",
+    "# Initialize the Decision Tree classifier\n",
+    "rforest = RandomForestClassifier(max_depth=15, random_state=42)\n",
+    "\n",
+    "# Perform k-fold cross-validation\n",
+    "k = 5  # Number of folds\n",
+    "kf = KFold(n_splits=k, shuffle=True, random_state=42)\n",
+    "scores = cross_val_score(rforest, features, dependent_encoded, cv=kf)\n",
+    "\n",
+    "# Calculate and print the average accuracy\n",
+    "average_accuracy = scores.mean()\n",
+    "print(f'Average Accuracy: {average_accuracy:.2f}')\n",
+    "print(scores)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### RANDOM FOREST 20 ROUNDS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean:  0.9184210526315791\n",
+      "Min:  0.9115384615384615\n",
+      "Max:  0.9288461538461539\n"
      ]
     }
    ],
@@ -472,7 +635,7 @@
     "\n",
     "# Extract the relevant columns\n",
     "# ! POPULATION IS VERY IMPORTANT IN THIS CASE\n",
-    "features = data[['cement_co2', 'coal_co2', 'flaring_co2', 'gas_co2', 'land_use_change_co2', 'oil_co2', 'other_industry_co2', 'trade_co2']]\n",
+    "features = data[['population','cement_co2', 'coal_co2', 'flaring_co2', 'gas_co2', 'land_use_change_co2', 'oil_co2', 'other_industry_co2', 'trade_co2']]\n",
     "dependent = data['classification']\n",
     "\n",
     "# Encode the string labels into numeric values\n",
@@ -485,7 +648,7 @@
     "    features_train, features_test, dependent_train, dependent_test = train_test_split(features, dependent_encoded, test_size=0.2, random_state=42)\n",
     "\n",
     "    # Initialize and fit the RandomForestClassifier\n",
-    "    rforest = RandomForestClassifier()\n",
+    "    rforest = RandomForestClassifier(max_depth=15)\n",
     "    rforest = rforest.fit(features_train, dependent_train)\n",
     "\n",
     "    # Make predictions on the test data\n",
